[gd_scene load_steps=5 format=3 uid="uid://c2yqv7h8mxb8w"]

[ext_resource type="Script" uid="uid://cro5doma8kkx6" path="res://scripts/core/HUDMinigameLauncher.gd" id="1"]
[ext_resource type="Script" uid="uid://djvbuaj3613qf" path="res://scripts/ui/MinigameContainer.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://bplib8x3v7ia" path="res://scenes/UI/BlueprintLibraryPanel.tscn" id="2_blueprint_lib"]
[ext_resource type="Script" uid="uid://dp8gqnisiuoue" path="res://scripts/ui/RequestsPanel.gd" id="3_a5nox"]

[node name="HUD_Forge" type="CanvasLayer"]
layer = 5
script = ExtResource("1")

[node name="BlueprintQueuePanel" type="ColorRect" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -180.0
offset_right = 280.0
offset_bottom = 430.0
grow_vertical = 2
color = Color(0.2, 0.2, 0.25, 0.9)

[node name="QueueVBox" type="VBoxContainer" parent="BlueprintQueuePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 4

[node name="QueueLabel" type="Label" parent="BlueprintQueuePanel/QueueVBox"]
layout_mode = 2
text = "Pedidos"
horizontal_alignment = 1

[node name="ViewBlueprintsBtn" type="Button" parent="BlueprintQueuePanel/QueueVBox"]
layout_mode = 2
text = "ðŸ“‹ Ver Blueprints"

[node name="QueueContainer" type="VBoxContainer" parent="BlueprintQueuePanel/QueueVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 4

[node name="InventoryPanel" type="ColorRect" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -1074.0
offset_top = -626.0
offset_right = -8.0
offset_bottom = -536.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0.25, 0.25, 0.3, 0.9)

[node name="InventoryVBox" type="HBoxContainer" parent="InventoryPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 4

[node name="InventoryLabel" type="Label" parent="InventoryPanel/InventoryVBox"]
visible = false
layout_mode = 2
text = "Inventario"
horizontal_alignment = 1

[node name="MaterialsList" type="HBoxContainer" parent="InventoryPanel/InventoryVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 2

[node name="RoomLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 10.0
offset_right = 100.0
offset_bottom = 40.0
grow_horizontal = 2
text = "FORJA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DeliveryPanel" type="ColorRect" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 180.0
offset_top = -209.0
offset_right = 479.0
offset_bottom = -141.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.15, 0.15, 0.18, 0.5)

[node name="DeliveryVBox" type="VBoxContainer" parent="DeliveryPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="DeliverHBox" type="HBoxContainer" parent="DeliveryPanel/DeliveryVBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Client" type="Button" parent="DeliveryPanel/DeliveryVBox/DeliverHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Entregar a Cliente
(Recibir oro)"

[node name="Hero" type="Button" parent="DeliveryPanel/DeliveryVBox/DeliverHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Equipar en HÃ©roe
(Mejorar stats)"

[node name="PrintsLabel" type="Label" parent="."]
offset_left = 13.0
offset_top = 1138.0
offset_right = 267.0
offset_bottom = 1161.0
text = "Debug:"

[node name="PrintsArea" type="TextEdit" parent="."]
custom_minimum_size = Vector2(0, 100)
offset_left = 13.0
offset_top = 1165.0
offset_right = 267.0
offset_bottom = 1268.0
size_flags_vertical = 3
editable = false
wrap_mode = 1

[node name="BlueprintLibraryPanel" parent="." instance=ExtResource("2_blueprint_lib")]

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_a5nox")

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RefreshBtn" type="Button" parent="ColorRect/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MinigameContainer" type="SubViewportContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -267.0
offset_top = -192.0
offset_right = 263.0
offset_bottom = 188.0
grow_horizontal = 2
grow_vertical = 2
stretch = true
mouse_target = true
script = ExtResource("2")

[node name="SubViewport" type="SubViewport" parent="MinigameContainer"]
unique_name_in_owner = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(530, 380)
render_target_update_mode = 4
